TASK 1 : logs_python_script

--- a/conf/flumelogs.conf
+++ b/conf/flumelogs.conf
@@ -7,18 +7,20 @@ a1.channels = c1
 
 # Describe/configure the source
 a1.sources.r1.type = spooldir
-a1.sources.r1.spoolDir = /root/Projet-Big-Data/spool
+a1.sources.r1.spoolDir = /root/big_Data/Data_Log_analysis/spool
 a1.sources.r1.fileHeader = true
 a1.sources.r1.interceptors = timestampInterceptor
 a1.sources.r1.interceptors.timestampInterceptor.type = timestamp
 
 # Describe the sink
 a1.sinks.k1.type = hdfs
-a1.sinks.k1.hdfs.path = /root/Projet-Big-Data/flume/%y-%m-%d/%H%M/%S
+a1.sinks.k1.hdfs.path = /root/big_Data/Data_Log_analysis/flume/%y-%m-%d/%H%M/%S
 a1.sinks.k1.hdfs.filePrefix = events-
 a1.sinks.k1.hdfs.round = true
 a1.sinks.k1.hdfs.roundValue = 10
 a1.sinks.k1.hdfs.roundUnit = minute
+a1.sinks.k1.hdfs.fileType = DataStream
+a1.sinks.k1.hdfs.writeFormat = Text
 
 # Use a channel which buffers events in memory
 a1.channels.c1.type = memory
