TASK 2 : Generating Logs using Flask server and Store them in Hbase using Flume while turning up Thrift Server

--- a/conf/flumelogs.conf
+++ b/conf/flumelogs.conf
@@ -13,14 +13,11 @@ a1.sources.r1.interceptors = timestampInterceptor
 a1.sources.r1.interceptors.timestampInterceptor.type = timestamp
 
 # Describe the sink
-a1.sinks.k1.type = hdfs
-a1.sinks.k1.hdfs.path = /root/big_Data/Data_Log_analysis/flume/%y-%m-%d/%H%M/%S
-a1.sinks.k1.hdfs.filePrefix = events-
-a1.sinks.k1.hdfs.round = true
-a1.sinks.k1.hdfs.roundValue = 10
-a1.sinks.k1.hdfs.roundUnit = minute
-a1.sinks.k1.hdfs.fileType = DataStream
-a1.sinks.k1.hdfs.writeFormat = Text
+a1.sinks.k1.type = hbase
+a1.sinks.k1.table = logs_table
+a1.sinks.k1.columnFamily = cf
+a1.sinks.k1.serializer = org.apache.flume.sink.hbase.RegexHbaseEventSerializer
+a1.sinks.k1.serializer.regex = (.*)
 
 # Use a channel which buffers events in memory
 a1.channels.c1.type = memory
