TASK 3 :  rewriting Readme.md

--- a/conf/flumelogs.conf
+++ b/conf/flumelogs.conf
@@ -7,14 +7,14 @@ a1.channels = c1
 
 # Describe/configure the source
 a1.sources.r1.type = spooldir
-a1.sources.r1.spoolDir = /root/big_Data/Data_Log_analysis/spool
+a1.sources.r1.spoolDir = ./spool
 a1.sources.r1.fileHeader = true
 a1.sources.r1.interceptors = timestampInterceptor
 a1.sources.r1.interceptors.timestampInterceptor.type = timestamp
 
 # Describe the sink
 a1.sinks.k1.type = hbase
-a1.sinks.k1.table = logs_table
+a1.sinks.k1.table =logs
 a1.sinks.k1.columnFamily = cf
 a1.sinks.k1.serializer = org.apache.flume.sink.hbase.RegexHbaseEventSerializer
 a1.sinks.k1.serializer.regex = (.*)
